--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Karim Abdeselam Canales",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "socket.io": "^1.4.5"
   }
 }
